--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -66,5 +66,7 @@
     <footer>
         Trải nghiệm mua sắm TechOne - nhanh, rõ ràng, chính hãng.
     </footer>
+    <script src="{% static 'core/js/custom-select.js' %}"></script>
+    {% block extra_scripts %}{% endblock %}
 </body>
 </html>
