--- a/dashboard/templates/dashboard/home.html
+++ b/dashboard/templates/dashboard/home.html
@@ -55,6 +55,15 @@
                 <a class="btn-ghost btn-sm" href="{% url 'customer_list' %}">Mở</a>
             </div>
         </li>
+        <li class="list-item">
+            <div class="list-meta">
+                <strong>Đơn hàng</strong>
+                <span>Theo dõi và cập nhật trạng thái đơn mới</span>
+            </div>
+            <div class="list-actions">
+                <a class="btn-ghost btn-sm" href="{% url 'order_list' %}">Mở</a>
+            </div>
+        </li>
     </ul>
 </section>
 {% endblock %}
